ordenes-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordenes-service-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordenes-service-pod
  template:
    metadata:
      labels:
        app: ordenes-service-pod
    spec:
      containers:
      - name: ordenes-service-container
        image: ingjavierr/ordenes-service:latest
        ports:
        - containerPort: 8020
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ordenes-service-svc
spec:
  selector:
    app: ordenes-service-pod
  ports:
  - port: 8020
    protocol: TCP
    targetPort: 8020
  type: ClusterIP
