productos-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productos-service-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productos-service-pod
  template:
    metadata:
      labels:
        app: productos-service-pod
    spec:
      containers:
      - name: productos-service-container
        image: ingjavierr/productos-service:latest
        ports:
        - containerPort: 8030
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: productos-service-svc
spec:
  selector:
    app: productos-service-pod
  ports:
  - port: 8030
    protocol: TCP
    targetPort: 8030
  type: ClusterIP
